Scrollbars styling fixed

--- a/src/app/component/listlist/listlist.component.scss
+++ b/src/app/component/listlist/listlist.component.scss
@@ -17,6 +17,8 @@ app-listlistsingle{
 
   ::-webkit-scrollbar-thumb {
     background: rgba(0,0,0,0.6);
+
+    border-radius: 10px;
   }
 
   ::-webkit-scrollbar-track {
