--- a/src/app/component/listlistsingle/listlistsingle.component.scss
+++ b/src/app/component/listlistsingle/listlistsingle.component.scss
@@ -49,6 +49,7 @@
 
 ::-webkit-scrollbar-thumb {
   background: rgba(0,0,0,0.6);
+  border-radius: 10px;
 }
 
 .rearrange{
